--- a/ColorStyler.html
+++ b/ColorStyler.html
@@ -90,7 +90,7 @@
 
 		<div class="container" style="width:100%;">
 				<div>
-				<form style="border:1px;" class="">
+				<form style="border:1px;" class="opacitySliderForm">
 					<label class="">Color Opacity</label>
 					<input class="" type="range" name="bgopacity" id="bgopacity" value="255" min="0" max="255" step="1" onchange="rangevalue.value=value">
 					<output class="hidden" syle="align:right;opacity:0;" id="rangevalue">255</output>
