--- a/ColorStyler.html
+++ b/ColorStyler.html
@@ -22,8 +22,8 @@
 </head>
 <body role="document" style="overflow: auto">
 
-<div class="navigation-bar" style="display:inline-block;height:60px;width:90%;overflow:hidden;">
-	<div class="navigation-bar-object" style="width:10%; float:left;"><img src="img/logo1.png" style="height:19px;width:78px;padding-top:3px;margin-left:2.5%;"></div>
+<div class="container" style="height:60px;width:95%;overflow:hidden;">
+	<div class="navigation-bar-object" style="width:10%; float:left;"><img src="img/logo4_small.png" style="height:33px;width:133px;padding-top:0px;margin-top:-5px;"></div>
 	<div class="navigation-bar-object" style="width:30%; float:left;"><span class="lui-icon lui-icon--database" style="float:right;padding-top:3px;"></div>
 	<div class="frame lui-bg-default navigation-bar-object" style="width:25%; float:left;">
 	<select class="lui-select" id="qlikAppList">
