Added help info

--- a/ColorStyler.html
+++ b/ColorStyler.html
@@ -25,15 +25,22 @@
 <div class="container" style="height:60px;width:95%;overflow:hidden;">
 	<div class="navigation-bar-object" style="width:10%; float:left;"><img src="img/logo4_small.png" style="height:33px;width:133px;padding-top:0px;margin-top:-5px;"></div>
 	<div class="navigation-bar-object" style="width:30%; float:left;"><span class="lui-icon lui-icon--database" style="float:right;padding-top:3px;"></div>
+	<div class="navigation-bar-object" style="width:10%; float:right;font-size:11px;" id="helpButton"><span class="lui-icon lui-icon--help" style="padding-top:3px;"></span> Help</div>
 	<div class="frame lui-bg-default navigation-bar-object" style="width:25%; float:left;">
 	<select class="lui-select" id="qlikAppList">
 		<option selected disabled>Select an app...</option>
 	</select>
 </div>
+
+
+
+	
+	
 </div>
 <div class="horizontal-line"></div>
 
 <div class="container hidden" id="mainFrame" style="width:95%">
+
 	<div class="frame lui-bg-default" id="appVizList">
 
 	</div>
