--- a/ColorStyler.html
+++ b/ColorStyler.html
@@ -135,9 +135,10 @@
 			</div>
 		</div>
 		<div id="vizArea" style="" class="qlikVizArea center size-medium">Select an app and visualization</div>
+		<div class="container" id="messageBar" style="margin-left:0px;width:50%;"></div>
 	</div>
 </div>	
-<div class="container" id="messageBar" style="width:50%;"></div>
+
 
 
 <script src="js/jquery.min.js"></script>
