--- a/ColorStyler.html
+++ b/ColorStyler.html
@@ -11,6 +11,7 @@
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-status-bar-style" content="black">
 	<meta http-equiv="cleartype" content="on">
+    <link rel="icon" href="favicon.ico">	
 	<script src="../../resources/assets/external/requirejs/require.js"></script>
 	<!-- Bootstrap core CSS -->
 	<link rel="stylesheet" href="css/font-awesome.min.css">
