Clear Selections button added

--- a/ColorStyler.html
+++ b/ColorStyler.html
@@ -116,7 +116,7 @@
 	</div>
 	<div class="right-panel hidden" style="width:75%;">
 		
-		<div class="frame lui-bg-default" id="viewSize">
+		<span class="frame lui-bg-default" id="viewSize" style="width:75%;">
 			<div class="lui-buttongroup buttongroupResize" style="">
 				<button class="lui-button" id="x-small">
 					X-Small
@@ -134,7 +134,10 @@
 					X-Large
 				</button>
 			</div>
-		</div>
+		</span>
+		<span class="lui-buttongroup" style="margin-left:50px;">
+		  <button class="lui-button" id="clear">Clear</button>
+	  	</span>
 		<div id="vizArea" style="" class="qlikVizArea center size-medium">Select an app and visualization</div>
 		<div class="container" id="messageBar" style="margin-left:0px;width:50%;"></div>
 	</div>
